--- a/index.html
+++ b/index.html
@@ -8,13 +8,42 @@
     <title>StreamFootball</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="Picture/favicon.png" type="image/x-icon">
-    <!-- Add CSS -->
+    <!-- ---Add CSS--- -->
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- -----Font Awesome--- -->
+    <script src="https://kit.fontawesome.com/87c0a7c28f.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+    <!------ ----Heading Start ---------- -->
 
+    <header class="top-container">
+        <div class="nav">
+
+        </div>
+        <div class="header-manager">
+            <div class="heading-info">
+                <h1>Conmebol Copa America 2021</h1>
+                <div class="button-transfrom">
+                    <button class="header-button">
+                        <a href="https://www.youtube.com/" target="blank"> Live Watch </a>
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
+                </div>
+
+            </div>
+            <div class="banner">
+                <img class="banner-pic" src="Picture/banner.png" alt="site Picture">
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
