main part update

--- a/index.html
+++ b/index.html
@@ -38,8 +38,173 @@
             </div>
         </div>
     </header>
-    <main>
 
+    <!-- ------------------Main part start----------------- -->
+
+    <main class="main-container">
+        <div class="articles">
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-1.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Neymar Jr</h3>
+                    <p>
+                        Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian
+                        professional
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-2.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Lionel Messi</h3>
+                    <p>
+                        Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an
+                        attacking
+                    </p>
+                </div>
+
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-3.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>
+                        Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese forward for Serie A club Juventus
+                        team.
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-4.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Paulo Dybala</h3>
+                    <p>
+                        Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-5.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Mesut Ozil </h3>
+                    <p>
+                        Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                        Lig
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-6.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Mauro Icardi</h3>
+                    <p>
+                        Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1
+                        club
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-7.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Di Maria </h3>
+                    <p>
+                        Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris
+                        Saint-Germain a
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-8.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Kylian Mbappé </h3>
+                    <p>
+                        Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-9.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Mohamed Salah </h3>
+                    <p>
+                        Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward
+                        for
+
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-10.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Harry Kane </h3>
+                    <p>
+                        Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier
+
+                        play.
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-11.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Kevin De Bruyne </h3>
+                    <p>
+                        Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
+                        League
+                        club Manchester
+                    </p>
+                </div>
+            </div>
+            <div class="article">
+                <div class="article-photo">
+                    <img src="Picture/players/player-12.png" alt="Neymer">
+                </div>
+                <div class="article-info">
+                    <h3>Philippe Coutinho</h3>
+                    <p>
+                        Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking
+                        midfielder or winger
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="feedbacks">
+            <div class="form-feedback">
+                <h3>Give Your Feedback</h3>
+            </div>
+            <div class="rating">
+                <h3>Rating US</h3>
+            </div>
+        </div>
     </main>
     <footer>
 
