--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <!-- ------------------Main part start----------------- -->
+    <!-- ------------------Main-1st part start----------------- -->
 
     <main class="main-container">
         <div class="articles">
@@ -196,17 +196,52 @@
             </div>
 
         </div>
-
+        <!-------------------------- main-2nd part Start---------------- -->
         <div class="feedbacks">
             <div class="form-feedback">
-                <h3>Give Your Feedback</h3>
+                <h3 class="same-design">Feedback</h3>
+                <form action="">
+                    <textarea id="txtid" name="feedback" rows="6" cols="50" maxlength="200">Comment your feedback
+                    </textarea>
+                </form>
+                <input class="input-design" type="text" placeholder="Enter your Name">
+                <input class="input-design" type="email" placeholder="Enter your Email">
+                <br>
+                <button class="feedback-button" type="submit">Submit</button>
+                <button class="feedback-button" type="reset">Reset</button>
             </div>
             <div class="rating">
-                <h3>Rating US</h3>
+                <h3 class="same-design">Rating</h3>
+
+                <p>Rating us 5 Star</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star unfilled"></i>
+                <p>Downloads StreamFootball On</p>
+                <span>
+                    <img src="Picture/play_store.svg" alt="playstore">
+                </span>
+                <span>
+                    <img src="Picture/apple_store.svg" alt="applestore">
+                </span>
             </div>
         </div>
     </main>
-    <footer>
+
+    <!-- -------------footer Start-------------- -->
+    <footer class="footer-container">
+        <div class="footer-logo">
+            <img src="Picture/Logo.png" alt="FooterLogo">
+        </div>
+        <span>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-dribbble"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+        </span>
+        <p>Copyright &copy; 2022 StreamFootball</p>
 
     </footer>
 </body>
