update and cheeked

--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
                 <h3 class="same-design">Rating</h3>
 
                 <p>Rating us 5 Star</p>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
+                <i class="fas fa-star filled"></i>
                 <i class="fas fa-star unfilled"></i>
-                <p>Downloads StreamFootball On</p>
+                <p>Downloads <span class="special"> StreamFootball</span> On</p>
                 <span>
                     <img src="Picture/play_store.svg" alt="playstore">
                 </span>
@@ -235,13 +235,13 @@
         <div class="footer-logo">
             <img src="Picture/Logo.png" alt="FooterLogo">
         </div>
-        <span>
+        <span class="social-font-wessame">
             <i class="fab fa-instagram"></i>
             <i class="fab fa-dribbble"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-youtube"></i>
         </span>
-        <p>Copyright &copy; 2022 StreamFootball</p>
+        <p>Copyright &copy; 2021 StreamFootball</p>
 
     </footer>
 </body>
