--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="Picture/favicon.png" type="image/x-icon">
     <!-- ---Add CSS--- -->
+    <link rel="stylesheet" href="CSS/media.css">
     <link rel="stylesheet" href="CSS/style.css">
     <!-- -----Font Awesome--- -->
     <script src="https://kit.fontawesome.com/87c0a7c28f.js" crossorigin="anonymous"></script>
